<resources>
    <string name="app_name">QuizDroid</string>
    <string name="appwidget_text">QuizDroid</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="edit_preference_title">Username</string>
    <string name="save">Gravar username</string>
    <!--Adicionar pergunta-->
    <string name="adicionar_pergunta"> Adicionar Pergunta Fácil</string>
    <string name="pergunta">Pergunta</string>
    <string name="pergunta_listas">Perguntas</string>
    <string name="opcao1">Opção 1</string>
    <string name="opcao2">Opção 2</string>
    <string name="opcao3">Opção 3</string>
    <string name="opcao4">Opção 4</string>
    <string name="opcao_correta">Opção Correta</string>
    <string name="adcionar">Adicionar</string>
    <!--Adicionar dificil-->
    <string name="adicionar_pergunta_dificil"> Adicionar Pergunta Difícil</string>
    <string name="adicionar_pergunta_moderado"> Adicionar Pergunta Moderado</string>
    <!--Adicionar administracao-->
    <string name="administracao">Adminstração</string>
    <string name="perguntas">Ver Perguntas</string>
    <string name="adicionar_pergunta_admin">Adicionar Pergunta</string>
    <string name="preferencias">Preferências</string>
    <!--Escolha nivel-->
    <string name="escolha_nivel">Escolha o nível</string>
    <string name="nivel_facil">Nível Fácil</string>
    <string name="nivel_moderado">Nível Moderdado</string>
    <string name="nivel_dificil">Nível Difícil</string>
    <!--Escolha nivel jogo-->
    <string name="escolha_nivel_jogo">Escolha o nível em que pretendes jogar</string>
    <string name="perfil">Perfil</string>
    <string name="no_perfil">Sem perfil</string>
    <string name="pergunta_lista">Pergunta</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="editar_pergunta">Editar Pergunta</string>
    <string name="eliminar">Eliminar</string>
    <string name="preferencia">Preferências</string>
    <string name="nick">Nickname</string>
    <string name="introduzir_nick">Introduza um Nickname</string>
    <string name="nova_pergunta">Nova Pergunta</string>
    <string name="music_on">Musica ON</string>
    <string name="music_off">Musica OFF</string>
    <string name="guardar">Guardar</string>
    <string name="menu">Menu</string>
    <string name="ranking">RANKING</string>
    <string name="ganhas_te"> Já Ganhas-te</string>
    <string name="numero_jogos"> Número de Jogos:</string>
    <string name="numero_vitorias">Número de Vitórias:</string>
    <string name="novo_jogo">NOVO JOGO</string>
    <string name="parabens">PARABÉNS</string>
    <string name="ganhas_te_grande">GANHAS-TE</string>
















</resources>
