<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_adicionar_dificil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2c498c"
    tools:context="cmu.QuizDroidFinal.AdicionarDificilActivity">

    <TextView
        android:text="@string/adicionar_pergunta_dificil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:id="@+id/textView_label"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textStyle="normal|bold"
        android:textColor="#ffffff"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/pergunta"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:id="@+id/editText_pergunta"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:hint="@string/opcao1"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:id="@+id/editText_opcao_1"
        android:layout_below="@+id/editText_pergunta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/opcao2"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:id="@+id/editText_opcao_2"
        android:layout_below="@+id/editText_opcao_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/opcao3"
        android:textColorHint="#ffffff"
        android:id="@+id/editText_opcao_3"
        android:textColor="#ffffff"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/editText_opcao_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/opcao4"
        android:textColorHint="#ffffff"
        android:layout_marginTop="13dp"
        android:id="@+id/editText_opcao_4"
        android:textColor="#ffffff"
        android:layout_below="@+id/editText_opcao_3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/opcao_correta"
        android:textColorHint="#ffffff"
        android:layout_marginTop="8dp"
        android:id="@+id/editText_opcao_correta"
        android:textColor="#ffffff"
        android:layout_below="@+id/editText_opcao_4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/adcionar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/button_adicionar"
        android:textColor="#ffffff"
        android:background="@drawable/button_style"
        android:onClick="insert_question_dificil"/>

</RelativeLayout>
