<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ranking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2c498c"
    tools:context="cmu.QuizDroidFinal.RankingActivity">
    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/ranking"
        android:textColor="#ffffff"
        android:textSize="40.0sp" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="40.0sp" />
    <TextView
        android:id="@+id/numero_jogos_texto"
        android:text="@string/numero_jogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:gravity="right"
        android:textColor="#ffffff"
        android:textSize="20.0sp"
        android:layout_marginLeft="60dp"
        />
    <TextView
        android:id="@+id/numero_jogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#ffffff"
        android:textSize="20.0sp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/numero_jogos_texto"
        android:layout_toEndOf="@+id/numero_jogos_texto"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/numero_vitorias_texto"
        android:text="@string/numero_vitorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numero_jogos_texto"
        android:gravity="right"
        android:textColor="#ffffff"
        android:textSize="20.0sp"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:id="@+id/numero_vitorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#ffffff"
        android:textSize="20.0sp"
        android:layout_below="@+id/numero_jogos"
        android:layout_toRightOf="@+id/numero_vitorias_texto"
        android:layout_toEndOf="@+id/numero_vitorias_texto"
        android:layout_marginLeft="10dp" />
    <TextView
        android:id="@+id/txtPontuacaoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:text="@string/ganhas_te"
        android:textColor="#ffffff"
        android:textSize="40.0sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:id="@+id/imageView2"
        android:src="@drawable/ranking"
        android:layout_marginTop="36dp"
        android:layout_alignTop="@+id/txtQuestion"
        android:layout_centerHorizontal="true"

        />


</RelativeLayout>
