<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c498c"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ranking"
        android:id="@+id/imageView"
        android:layout_marginTop="5dp"
        android:layout_weight="0.16" />

    <TextView
        android:id="@+id/ganhaste"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/parabens"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="5dp" />
    <TextView
        android:id="@+id/ganhaste_texto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ganhas_te_grande"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/ganhaste"
        android:layout_marginTop="5dp" />
    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/ganhaste_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="0.06"
        android:weightSum="1" >

        <TextView
            android:id="@+id/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="€"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_alignBaseline="@+id/textScore_view"
            android:layout_alignBottom="@+id/textScore_view"
            android:layout_toRightOf="@+id/textScore_view"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="30dp"  />

        <TextView
            android:id="@+id/textScore_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:onClick="playagain"
        android:text="@string/novo_jogo"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />


</RelativeLayout>